# shunpo

./: Cargo.toml  LICENSE  README.md
src/: app.rs  coordinator.rs  coordinator_types.rs  keyboard_input.rs  main.rs  socket.rs  socket_error.rs  state.rs  ui.rs
src/config/: config.rs  error.rs
src/coordinator/: error.rs  listener.rs  mod.rs  types.rs
src/hyprland/: error.rs  event_parser.rs  events.rs  hyprctl.rs  macros.rs  mod.rs  state.rs  structs.rs
src/hyprpaper_client/: mod.rs  paper_client.rs
src/rg/: dispatcher.rs  mod.rs  rg.rs
src/search/: entity_loader.rs  entity_model.rs  entity_repository.rs  error.rs  item_source.rs  item_types.rs  listener.rs  matcher_helpers.rs  mod.rs
src/system/: volume.rs
src/tests/: hypr_event_parser.rs  hyprctl_parser.rs  mod.rs
src/tests/fixtures/: hyprctl_clients.json  hyprctl_monitors.json  hyprctl_workspaces.json
src/ui_gtk4/: builder.rs  controllers.rs  errors.rs  helpers.rs  main_gtk4.rs  message_handler.rs  mod.rs  types.rs  ui_widgets.rs  updaters.rs
src/ui_gtk4/fixtures/: styles.css
src/ui_gtk4/ui_updaters/: common.rs  mod.rs  search_results.rs  ui_mode.rs  workspace_widget.rs
