[package]
name = "shunpo"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
]}
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "io-util", "net", "macros", "time"] }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.28"
single-instance = "0.3.3"
nucleo = "0.5.0"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
