[package]
name = "shunpo"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "io-util", "net", "macros", "time"] }
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.28"
single-instance = "0.3.3"
nucleo = "0.5.0"
gtk4 = "0.10.2"
gtk4-layer-shell = "0.7.1"
async-channel = "2.5.0"
freedesktop-desktop-entry = "0.7.19"
toml = "0.9.8"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
